refactor: replace server-rendered UI with secured REST APIs